# stock2

./: .gitignore  Cargo.toml  company_map.json  ignore_stocks.txt
data/1101/: 2019.json  2020.json  2021.json  2022.json  2023.json  2024.json  2025.json  2026.json
data/1102/: 2019.json  2020.json  2021.json  2022.json  2023.json  2024.json  2025.json  2026.json
data/1103/: 2019.json  2020.json  2021.json  2022.json  2023.json  2024.json  2025.json  2026.json
data/1104/: 2019.json  2020.json  2021.json  2022.json  2023.json  2024.json  2025.json  2026.json
data/1108/: 2019.json  2020.json  2021.json  2022.json  2023.json  2024.json  2025.json  2026.json
data/1109/: 2019.json  2020.json  2021.json  2022.json  2023.json  2024.json  2025.json  2026.json
data/1110/: 2019.json  2020.json  2021.json  2022.json  2023.json  2024.json  2025.json  2026.json
data/1201/: 2019.json  2020.json  2021.json  2022.json  2023.json  2024.json  2025.json  2026.json
data/1203/: 2019.json  2020.json  2021.json  2022.json  2023.json  2024.json  2025.json  2026.json
data/1210/: 2019.json  2020.json  2021.json  2022.json  2023.json  2024.json  2025.json  2026.json
data/1213/: 2019.json  2020.json  2021.json  2022.json  2023.json  2024.json  2025.json  2026.json
data/1215/: 2019.json  2020.json  2021.json  2022.json  2023.json  2024.json  2025.json  2026.json
data/1216/: 2019.json  2020.json  2021.json  2022.json  2023.json  2024.json  2025.json  2026.json
data/1217/: 2019.json  2020.json  2021.json  2022.json  2023.json  2024.json  (+2 more)
src/: common.rs  consts.rs  main.rs
(+7653 files in other folders)
