[package]
name = "stock2"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.43"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls-webpki-roots"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ta = "0.5.0"
tokio = { version = "1", features = ["full"] }
